# serializer version: 1
# name: test_device_trait_command_parsing[clean_summary]
  CleanSummaryTrait(clean_area=24258125000, clean_count=296, clean_time=1442559, command=<RoborockCommand.GET_CLEAN_SUMMARY: 'get_clean_summary'>, dust_collection_count=None, last_clean_record=CleanRecord(area=[1756848207, 1754930385, 1753203976, 1752183435, 1747427370, 1746204046, 1745601543, 1744387080, 1743528522, 1742489154, 1741022299, 1740433682, 1739902516, 1738875106, 1738864366, 1738620067, 1736873889, 1736197544, 1736121269, 1734458038], avoid_count=None, begin=1442559, begin_datetime=datetime.datetime(1970, 1, 17, 16, 42, 39, tzinfo=datetime.timezone.utc), clean_type=None, complete=None, duration=296, dust_collection_status=None, end=24258125000, end_datetime=datetime.datetime(2738, 9, 17, 8, 3, 20, tzinfo=datetime.timezone.utc), error=None, finish_reason=None, map_flag=None, start_type=None, wash_count=None), last_clean_t=None, records=[1756848207, 1754930385, 1753203976, 1752183435, 1747427370, 1746204046, 1745601543, 1744387080, 1743528522, 1742489154, 1741022299, 1740433682, 1739902516, 1738875106, 1738864366, 1738620067, 1736873889, 1736197544, 1736121269, 1734458038], square_meter_clean_area=24258.1)
# ---
# name: test_device_trait_command_parsing[clean_summary].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '**REDACTED**',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': 'Roborock S7 MaxV',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': 'product-id-123',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-123',
      'model': 'roborock.vacuum.a27',
      'name': 'Roborock S7 MaxV',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'clean_summary': dict({
        'cleanArea': 24258125000,
        'cleanCount': 296,
        'cleanTime': 1442559,
        'records': list([
          1756848207,
          1754930385,
          1753203976,
          1752183435,
          1747427370,
          1746204046,
          1745601543,
          1744387080,
          1743528522,
          1742489154,
          1741022299,
          1740433682,
          1739902516,
          1738875106,
          1738864366,
          1738620067,
          1736873889,
          1736197544,
          1736121269,
          1734458038,
        ]),
      }),
      'device_features': dict({
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': False,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': False,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': False,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': False,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': False,
        'isCustomWaterBoxDistanceSupported': False,
        'isCustomizedCleanSupported': False,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': False,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': False,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': False,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': False,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': False,
        'isMultiMapSegmentTimerSupported': False,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': False,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': False,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': False,
        'isReSegmentSupported': False,
        'isRecordAllowed': False,
        'isRemoteSupported': False,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': False,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': False,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': False,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': False,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': False,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': False,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': False,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
    }),
  })
# ---
# name: test_device_trait_command_parsing[dnd]
  DoNotDisturbTrait(start_hour=22, start_minute=0, end_hour=8, end_minute=0, enabled=1)
# ---
# name: test_device_trait_command_parsing[dnd].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '**REDACTED**',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': 'Roborock S7 MaxV',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': 'product-id-123',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-123',
      'model': 'roborock.vacuum.a27',
      'name': 'Roborock S7 MaxV',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'device_features': dict({
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': False,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': False,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': False,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': False,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': False,
        'isCustomWaterBoxDistanceSupported': False,
        'isCustomizedCleanSupported': False,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': False,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': False,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': False,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': False,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': False,
        'isMultiMapSegmentTimerSupported': False,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': False,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': False,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': False,
        'isReSegmentSupported': False,
        'isRecordAllowed': False,
        'isRemoteSupported': False,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': False,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': False,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': False,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': False,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': False,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': False,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': False,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
      }),
      'dnd': dict({
        'enabled': 1,
        'endHour': 8,
        'endMinute': 0,
        'startHour': 22,
        'startMinute': 0,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
    }),
  })
# ---
# name: test_device_trait_command_parsing[status]
  StatusTrait(adbumper_status=None, auto_dust_collection=None, avoid_count=None, back_type=None, battery=100, camera_status=None, charge_status=None, clean_area=91287500, clean_fluid_status=None, clean_percent=None, clean_time=5405, clear_water_box_status=None, collision_avoid_status=None, command=<RoborockCommand.GET_STATUS: 'get_status'>, common_status=None, corner_clean_mode=None, current_map=0, debug_mode=None, dirty_water_box_status=None, distance_off=0, dnd_enabled=1, dock_cool_fan_status=None, dock_error_status=None, dock_type=None, dry_status=None, dss=None, dust_bag_status=None, dust_collection_status=None, error_code=<RoborockErrorCode.none: 0>, error_code_name='none', fan_power=<RoborockFanSpeedS7MaxV.custom: 106>, fan_power_name='custom', fan_power_options=['off', 'quiet', 'balanced', 'turbo', 'max', 'custom', 'max_plus'], hatch_door_status=None, home_sec_enable_password=None, home_sec_status=None, in_cleaning=<RoborockInCleaning.complete: 0>, in_fresh_state=1, in_returning=0, in_warmup=None, is_exploring=None, is_locating=0, kct=None, lab_status=1, last_clean_t=None, lock_status=0, map_present=1, map_status=3, mop_forbidden_enable=0, mop_mode=None, mop_mode_name=None, msg_seq=515, msg_ver=2, rdt=None, repeat=None, replenish_mode=None, rss=None, square_meter_clean_area=91.3, state=<RoborockStateCode.charging: 8>, state_name='charging', subdivision_sets=None, switch_map_mode=None, unsave_map_flag=0, unsave_map_reason=4, wash_phase=None, wash_ready=None, wash_status=None, water_box_carriage_status=0, water_box_filter_status=None, water_box_mode=<RoborockMopIntensityS7.custom: 204>, water_box_mode_name='custom', water_box_status=0, water_shortage_status=None)
# ---
# name: test_device_trait_command_parsing[status].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '**REDACTED**',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': 'Roborock S7 MaxV',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': 'product-id-123',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-123',
      'model': 'roborock.vacuum.a27',
      'name': 'Roborock S7 MaxV',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'device_features': dict({
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': False,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': False,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': False,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': False,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': False,
        'isCustomWaterBoxDistanceSupported': False,
        'isCustomizedCleanSupported': False,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': False,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': False,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': False,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': False,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': False,
        'isMultiMapSegmentTimerSupported': False,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': False,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': False,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': False,
        'isReSegmentSupported': False,
        'isRecordAllowed': False,
        'isRemoteSupported': False,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': False,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': False,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': False,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': False,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': False,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': False,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': False,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
      'status': dict({
        'battery': 100,
        'cleanArea': 91287500,
        'cleanTime': 5405,
        'distanceOff': 0,
        'dndEnabled': 1,
        'errorCode': 0,
        'fanPower': 106,
        'inCleaning': 0,
        'inFreshState': 1,
        'inReturning': 0,
        'isLocating': 0,
        'labStatus': 1,
        'lockStatus': 0,
        'mapPresent': 1,
        'mapStatus': 3,
        'mopForbiddenEnable': 0,
        'msgSeq': 515,
        'msgVer': 2,
        'state': 8,
        'unsaveMapFlag': 0,
        'unsaveMapReason': 4,
        'waterBoxCarriageStatus': 0,
        'waterBoxMode': 204,
        'waterBoxStatus': 0,
      }),
    }),
  })
# ---
# name: test_device_trait_command_parsing[volume]
  SoundVolumeTrait(volume=90)
# ---
# name: test_device_trait_command_parsing[volume].1
  dict({
    'device': dict({
      'activeTime': 1672364449,
      'deviceStatus': dict({
        '120': 0,
        '121': 8,
        '122': 100,
        '123': 102,
        '124': 203,
        '125': 94,
        '126': 90,
        '127': 87,
        '128': 0,
        '133': 1,
      }),
      'duid': '**REDACTED**',
      'extra': '{"RRPhotoPrivacyVersion": "1"}',
      'featureSet': '2234201184108543',
      'fv': '02.56.02',
      'iconUrl': 'no_url',
      'localKey': '**REDACTED**',
      'name': 'Roborock S7 MaxV',
      'newFeatureSet': '0000000000002041',
      'online': True,
      'productId': 'product-id-123',
      'pv': '1.0',
      'roomId': 2362003,
      'share': False,
      'silentOtaSwitch': True,
      'sn': '**REDACTED**',
      'timeZoneId': 'America/Los_Angeles',
      'tuyaMigrated': False,
    }),
    'product': dict({
      'capability': 0,
      'category': 'robot.vacuum.cleaner',
      'code': 'a27',
      'id': 'product-id-123',
      'model': 'roborock.vacuum.a27',
      'name': 'Roborock S7 MaxV',
      'schema': list([
        dict({
          'code': 'rpc_request_code',
          'id': '101',
          'mode': 'rw',
          'name': 'rpc_request',
          'type': 'RAW',
        }),
        dict({
          'code': 'rpc_response',
          'id': '102',
          'mode': 'rw',
          'name': 'rpc_response',
          'type': 'RAW',
        }),
        dict({
          'code': 'error_code',
          'id': '120',
          'mode': 'ro',
          'name': '错误代码',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'state',
          'id': '121',
          'mode': 'ro',
          'name': '设备状态',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'battery',
          'id': '122',
          'mode': 'ro',
          'name': '设备电量',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'fan_power',
          'id': '123',
          'mode': 'rw',
          'name': '清扫模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'water_box_mode',
          'id': '124',
          'mode': 'rw',
          'name': '拖地模式',
          'property': '{"range": []}',
          'type': 'ENUM',
        }),
        dict({
          'code': 'main_brush_life',
          'id': '125',
          'mode': 'rw',
          'name': '主刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'side_brush_life',
          'id': '126',
          'mode': 'rw',
          'name': '边刷寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'filter_life',
          'id': '127',
          'mode': 'rw',
          'name': '滤网寿命',
          'property': '{"max": 100, "min": 0, "step": 1, "unit": null, "scale": 1}',
          'type': 'VALUE',
        }),
        dict({
          'code': 'additional_props',
          'id': '128',
          'mode': 'ro',
          'name': '额外状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_complete',
          'id': '130',
          'mode': 'ro',
          'name': '完成事件',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_low_power',
          'id': '131',
          'mode': 'ro',
          'name': '电量不足任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'task_cancel_in_motion',
          'id': '132',
          'mode': 'ro',
          'name': '运动中任务取消',
          'type': 'RAW',
        }),
        dict({
          'code': 'charge_status',
          'id': '133',
          'mode': 'ro',
          'name': '充电状态',
          'type': 'RAW',
        }),
        dict({
          'code': 'drying_status',
          'id': '134',
          'mode': 'ro',
          'name': '烘干状态',
          'type': 'RAW',
        }),
      ]),
    }),
    'traits': dict({
      'device_features': dict({
        'isActivateVideoChargingAndStandbySupported': False,
        'isAnalysisSupported': False,
        'isAnyStateTransitGotoSupported': False,
        'isAutoCollection2Supported': False,
        'isAutoDeliveryFieldInGlobalStatusSupported': False,
        'isAutoTearDownMopSupported': False,
        'isAvoidCollisionModeSupported': False,
        'isAvoidCollisionSupported': False,
        'isBackChargeAutoWashSupported': False,
        'isBackWashNewSmartSupported': False,
        'isCarefulSlowMopSupported': False,
        'isCarpetCustomCleanSupported': False,
        'isCarpetDeepCleanSupported': False,
        'isCarpetLongHairedExSupported': False,
        'isCarpetLongHairedSupported': False,
        'isCarpetPressureUseOriginParasSupported': False,
        'isCarpetShapeTypeSupported': False,
        'isCarpetShowOnMap': False,
        'isCarpetSupported': False,
        'isCes2022Supported': False,
        'isCleanCountSettingSupported': False,
        'isCleanDirectStatusSupported': False,
        'isCleanEfficiencySupported': False,
        'isCleanFluidDeliverySupported': False,
        'isCleanHistoryTimeLineSupported': False,
        'isCleanRouteDeepSlowPlusSupported': False,
        'isCleanRouteFastModeSupported': False,
        'isCleanRouteSettingSupported': False,
        'isCleanThenMopModeSupported': False,
        'isCleanTimeLineSupported': False,
        'isCollectDustCountShowSupported': False,
        'isCollectDustModeSupported': False,
        'isCornerCleanModeSupported': False,
        'isCornerMopStretchSupported': False,
        'isCtmWithRepeatSupported': False,
        'isCurrentMapRestoreEnabled': False,
        'isCustomCleanModeCountSupported': False,
        'isCustomModeSupported': False,
        'isCustomWaterBoxDistanceSupported': False,
        'isCustomizedCleanSupported': False,
        'isDetectWireCarpetSupported': False,
        'isDirtyObjectDetectSupported': False,
        'isDirtyReplenishCleanSupported': False,
        'isDryIntervalTimerSupported': False,
        'isDssBelievable': False,
        'isDualBandWiFiSupported': False,
        'isDustCollectionSettingSupported': False,
        'isDynamicallyAddCleanZonesSupported': False,
        'isDynamicallySkipCleanZoneSupported': False,
        'isEggDanceModeSupported': False,
        'isEggModeSupportedFromNewFeatures': False,
        'isExactCustomModeSupported': False,
        'isExhibitionFunctionSupported': False,
        'isFloorDirCleanAnyTimeSupported': False,
        'isFlowLedSettingSupported': False,
        'isFollowLowObsSupported': False,
        'isFullDuplesSwitchSupported': False,
        'isFwFilterObstacleSupported': False,
        'isGapDeepCleanSupported': False,
        'isGotoPureCleanPathSupported': False,
        'isHotWashTowelSupported': False,
        'isIdentifyRoomSupported': False,
        'isIgnoreUnknownMapObjectSupported': False,
        'isLdsLiftingSupported': False,
        'isLedStatusSwitchSupported': False,
        'isLeftWaterDrainSupported': False,
        'isLowAreaAccessSupported': False,
        'isMainBrushUpDownSupportedFromStr': False,
        'isMapBeautifyInternalDebugSupported': False,
        'isMapCarpetAddSupport': False,
        'isMapEraserSupported': False,
        'isMatterSupported': False,
        'isMaxPlusModeSupported': False,
        'isMaxZoneOpenedSupported': False,
        'isMechanicalArmModeSupported': False,
        'isMidwayBackToDockSupported': False,
        'isMinBattery15ToCleanTaskSupported': False,
        'isMopForbiddenSupported': False,
        'isMopPathSupported': False,
        'isMopShakeModuleSupported': False,
        'isMopShakeWaterMaxSupported': False,
        'isMultiFloorSupported': False,
        'isMultiMapSegmentTimerSupported': False,
        'isNewAiRecognitionSupported': False,
        'isNewDataForCleanHistory': False,
        'isNewDataForCleanHistoryDetail': False,
        'isNewEndpointSupported': False,
        'isNewRemoteViewSupported': False,
        'isNoNeedCarpetPressSetSupported': False,
        'isNonePureCleanMopWithMaxPlus': False,
        'isObjectDetectCheckSupported': False,
        'isOfflineMapSupported': False,
        'isOptimizeBatterySupported': False,
        'isOrderCleanSupported': False,
        'isOverSeaCtmSupported': False,
        'isPetSnapshotSupported': False,
        'isPetSuppliesDeepCleanSupported': False,
        'isProgramModeSupported': False,
        'isPumpingWaterSupported': False,
        'isPureCleanMopSupported': False,
        'isReSegmentSupported': False,
        'isRecordAllowed': False,
        'isRemoteSupported': False,
        'isRightBrushStretchSupported': False,
        'isRoomNameSupported': False,
        'isRpcRetrySupported': False,
        'isRubberBrushCarpetSupported': False,
        'isSetChildSupported': False,
        'isSettingCarpetFirstSupported': False,
        'isShakeMopSetSupported': False,
        'isShouldShowArmOverLoadSupported': False,
        'isShowCleanFinishReasonSupported': False,
        'isShowGeneralObstacleSupported': False,
        'isShowObstaclePhotoSupported': False,
        'isSideBrushLiftCarpetSupported': False,
        'isSmallSideMopSupported': False,
        'isSmartCleanModeSetSupported': False,
        'isSoakAndWashSupported': False,
        'isSoftCleanModeSupported': False,
        'isSrMapSupported': False,
        'isSuperDeepWashSupported': False,
        'isSupportApiAppStopGraspSupported': False,
        'isSupportBackupMap': False,
        'isSupportCleanEstimate': False,
        'isSupportCliffZone': False,
        'isSupportCustomCarpet': False,
        'isSupportCustomDnd': False,
        'isSupportCustomDoorSill': False,
        'isSupportCustomModeInCleaning': False,
        'isSupportFetchTimerSummary': False,
        'isSupportFloorDirection': False,
        'isSupportFloorEdit': False,
        'isSupportFurniture': False,
        'isSupportGetParticularStatusSupported': False,
        'isSupportIncrementalMap': False,
        'isSupportMainBrushUpDownSupported': False,
        'isSupportMopBackPwmSet': False,
        'isSupportQuickMapBuilder': False,
        'isSupportRemoteControlInCall': False,
        'isSupportRoomTag': False,
        'isSupportSetSwitchMapMode': False,
        'isSupportSetVolumeInCall': False,
        'isSupportSideBrushUpDownSupported': False,
        'isSupportSmartDoorSill': False,
        'isSupportSmartGlobalCleanWithCustomMode': False,
        'isSupportSmartScene': False,
        'isSupportStuckZone': False,
        'isSupportVoiceControlDebug': False,
        'isSupportWaterMode': False,
        'isSupportedDownloadTestVoice': False,
        'isSupportedDrying': False,
        'isSupportedValleyElectricity': False,
        'isSyncServerNameSupported': False,
        'isThreeDMappingInnerTestSupported': False,
        'isTidyupZonesSupported': False,
        'isTwoGearsNoCollisionSupported': False,
        'isTwoKeyRealTimeVideoSupported': False,
        'isTwoKeyRtvInChargingSupported': False,
        'isTypeIdentifySupported': False,
        'isUnsaveMapReasonSupported': False,
        'isUvcSterilizeSupported': False,
        'isVideoMonitorSupported': False,
        'isVideoPatrolSupported': False,
        'isVideoSettingSupported': False,
        'isVoiceControlLedSupported': False,
        'isVoiceControlSupported': False,
        'isWashThenChargeCmdSupported': False,
        'isWaterLeakCheckSupported': False,
        'isWaterSlideModeSupported': False,
        'isWaterUpDownDrainSupported': False,
        'isWifiManageSupported': False,
        'isWorkdayHolidaySupported': False,
      }),
      'network_info': dict({
        'ip': '**REDACTED**',
      }),
      'sound_volume': dict({
        'volume': 90,
      }),
    }),
  })
# ---
